--- a/Source Code/front-end/package.json
+++ b/Source Code/front-end/package.json
@@ -14,6 +14,7 @@
         "v-click-outside": "^3.1.2",
         "vue": "^2.6.11",
         "vue-router": "^3.5.1",
+        "vue-tippy": "^4.10.2",
         "vuejs-paginate": "^2.1.0"
     },
     "devDependencies": {
